commit translated contents

--- a/docs/docs-ref-autogen/excel/excel.commentreply.yml
+++ b/docs/docs-ref-autogen/excel/excel.commentreply.yml
@@ -64,7 +64,7 @@ items:
           - string
   - uid: excel.Excel.CommentReply.content
     summary: |-
-      获取或设置内容。
+      获取或设置批注的内容。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -152,7 +152,7 @@ items:
           ```
   - uid: excel.Excel.CommentReply.getLocation
     summary: |-
-      获取批注回复的位置。
+      获取此批注答复所在的单元格。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -169,7 +169,7 @@ items:
         description: ''
   - uid: excel.Excel.CommentReply.getParentComment
     summary: |-
-      获取此回复的父批注。
+      获取此回复的父注释。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
