--- a/docs/docs-ref-autogen/excel/excel.interfaces.slicerstyleloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.slicerstyleloadoptions.yml
@@ -4,7 +4,7 @@ items:
     summary: |-
       表示一个切片器样式, 该样式按切片器区域定义样式元素。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: Excel.Interfaces.SlicerStyleLoadOptions
     fullName: Excel.Interfaces.SlicerStyleLoadOptions
@@ -32,7 +32,7 @@ items:
     summary: |-
       获取 SlicerStyle 的名称。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: name
     fullName: name
@@ -46,9 +46,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerStyleLoadOptions.readOnly
     summary: |-
-      True 表示此 SlicerStyle 对象为只读。 只读。
+      指定此 SlicerStyle 对象是否为只读。 只读。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: readOnly
     fullName: readOnly
