--- a/docs/docs-ref-autogen/excel/excel.interfaces.slicerupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.slicerupdatedata.yml
@@ -23,7 +23,7 @@ items:
     summary: |-
       表示切片器的标题。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: caption
     fullName: caption
@@ -39,7 +39,7 @@ items:
     summary: |-
       表示切片器的高度（以磅为单位）。 当设置为负值或零作为输入时, 将引发无效参数异常。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: height
     fullName: height
@@ -55,7 +55,7 @@ items:
     summary: |-
       表示从切片器左侧到工作表左侧的距离（以磅为单位）。 当设置为负值作为输入时引发无效参数异常。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: left
     fullName: left
@@ -71,7 +71,7 @@ items:
     summary: |-
       表示切片器的名称。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: name
     fullName: name
@@ -87,7 +87,7 @@ items:
     summary: |-
       表示公式中使用的名称。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: nameInFormula
     fullName: nameInFormula
@@ -103,7 +103,7 @@ items:
     summary: |-
       表示切片器中的项目的排序顺序。 可能的值为：DataSourceOrder、Ascending、Descending。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: sortBy
     fullName: sortBy
@@ -117,9 +117,9 @@ items:
           - Excel.SlicerSortType | "DataSourceOrder" | "Ascending" | "Descending"
   - uid: excel.Excel.Interfaces.SlicerUpdateData.style
     summary: |-
-      表示切片器样式的常量值。 可能的值为：SlicerStyleLight1 thru SlicerStyleLight6、TableStyleOther1 thru TableStyleOther2、SlicerStyleDark1 thru SlicerStyleDark6。 还可以指定工作簿中显示的用户定义的自定义样式。
+      表示切片器样式的常量值。 可能的值为：SlicerStyleLight1 through SlicerStyleLight6、TableStyleOther1 through TableStyleOther2、 SlicerStyleDark1 through SlicerStyleDark6。 还可以指定工作簿中显示的用户定义的自定义样式。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: style
     fullName: style
@@ -135,7 +135,7 @@ items:
     summary: |-
       表示从切片器上边缘到工作表顶部的距离（以磅为单位）。 当设置为负值作为输入时引发无效参数异常。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: top
     fullName: top
@@ -151,7 +151,7 @@ items:
     summary: |-
       表示切片器的宽度（以磅为单位）。 当设置为负值或零作为输入时, 将引发无效参数异常。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: width
     fullName: width
@@ -167,7 +167,7 @@ items:
     summary: |-
       表示包含切片器的工作表。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: worksheet
     fullName: worksheet
