--- a/docs/docs-ref-autogen/excel/excel.interfaces.tablescopedcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.tablescopedcollectionloadoptions.yml
@@ -252,7 +252,7 @@ items:
           - excel.Excel.Interfaces.TableSortLoadOptions
   - uid: excel.Excel.Interfaces.TableScopedCollectionLoadOptions.style
     summary: |-
-      对于集合中的每一项: 表示表样式的常量值。 可能的值是：TableStyleLight1 thru TableStyleLight21、TableStyleMedium1 thru TableStyleMedium28、TableStyleStyleDark1 thru TableStyleStyleDark11。 还可以指定工作簿中显示的用户定义的自定义样式。
+      对于集合中的每一项: 表示表样式的常量值。 可能的值是：TableStyleLight1 through TableStyleLight21、TableStyleMedium1 through TableStyleMedium28、TableStyleStyleDark1 through TableStyleStyleDark11。 还可以指定工作簿中显示的用户定义的自定义样式。
 
       \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
