--- a/docs/docs-ref-autogen/excel/excel.table.yml
+++ b/docs/docs-ref-autogen/excel/excel.table.yml
@@ -602,7 +602,7 @@ items:
           ```
   - uid: excel.Excel.Table.reapplyFilters
     summary: |-
-      重新应用当前表上的所有筛选器。
+      重新应用当前在 table 上应用的所有 filter。
 
       \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: reapplyFilters()
@@ -767,7 +767,7 @@ items:
           - excel.Excel.TableSort
   - uid: excel.Excel.Table.style
     summary: |-
-      表示表格样式的常量值。可能的值是：TableStyleLight1 thru TableStyleLight21、TableStyleMedium1 thru TableStyleMedium28、TableStyleStyleDark1 thru TableStyleStyleDark11。还可以指定工作簿中显示的用户定义的自定义样式。
+      表示表格样式的常量值。 可能的值是：TableStyleLight1 through TableStyleLight21、TableStyleMedium1 through TableStyleMedium28、TableStyleStyleDark1 through TableStyleStyleDark11。 还可以指定工作簿中显示的用户定义的自定义样式。
 
       \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
