--- a/docs/docs-ref-autogen/excel/excel.worksheetsingleclickedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.worksheetsingleclickedeventargs.yml
@@ -20,7 +20,7 @@ items:
       - excel.Excel.WorksheetSingleClickedEventArgs.worksheetId
   - uid: excel.Excel.WorksheetSingleClickedEventArgs.address
     summary: |-
-      获取表示特定工作表的已左键单击/点击的单元格的地址。
+      获取特定工作表中表示被左键单击/点击的单元格的地址。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -36,7 +36,7 @@ items:
           - string
   - uid: excel.Excel.WorksheetSingleClickedEventArgs.offsetX
     summary: |-
-      它是一个双精度值, 以磅为单位, 从左击或点击的单元格的左侧 (右边的 RTL) 网格线边缘。
+      从左键单击/点击的点到左键单击/点击的单元格的左（RTL 则为右侧）网格线边缘的距离（以磅为单位）。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -52,7 +52,7 @@ items:
           - number
   - uid: excel.Excel.WorksheetSingleClickedEventArgs.offsetY
     summary: |-
-      它是一个双精度值, 以磅为单位表示从左击或点击的单元格的上一个网格线边缘的距离 (以磅为单位)。
+      从左键单击/点击的点到左键单击/点击的单元格的顶部网格线边缘的距离（以磅为单位）。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -84,7 +84,7 @@ items:
           - '"WorksheetSingleClicked"'
   - uid: excel.Excel.WorksheetSingleClickedEventArgs.worksheetId
     summary: |-
-      获取已在其中单击或点击单元格的工作表的 id。
+      获取已在其中左键单击/点击单元格的工作表的 ID。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
