--- a/docs/docs-ref-autogen/excel/excel.comment.yml
+++ b/docs/docs-ref-autogen/excel/excel.comment.yml
@@ -64,7 +64,7 @@ items:
           - string
   - uid: excel.Excel.Comment.content
     summary: |-
-      获取或设置内容。
+      获取或设置批注的内容。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -105,7 +105,7 @@ items:
           - RequestContext
   - uid: excel.Excel.Comment.creationDate
     summary: |-
-      获取批注的创建时间。 如果批注是从注释转换而来的，则返回 null，因为在这种情况下，批注没有创建日期。
+      获取批注的创建时间。 如果批注是从备注转换而来的，则返回 null，因为批注没有创建日期。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -148,7 +148,7 @@ items:
           ```
   - uid: excel.Excel.Comment.getLocation
     summary: |-
-      获取批注的位置。
+      获取此注释所在的单元格。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
