--- a/docs/docs-ref-autogen/excel/excel.interfaces.pivottablestylecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.pivottablestylecollectionloadoptions.yml
@@ -4,7 +4,7 @@ items:
     summary: |-
       代表数据透视表样式的集合。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: Excel.Interfaces.PivotTableStyleCollectionLoadOptions
     fullName: Excel.Interfaces.PivotTableStyleCollectionLoadOptions
@@ -32,7 +32,7 @@ items:
     summary: |-
       对于集合中的每一项: 获取 PivotTableStyle 的名称。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: name
     fullName: name
@@ -46,9 +46,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.PivotTableStyleCollectionLoadOptions.readOnly
     summary: |-
-      对于集合中的每一项: True 表示此 PivotTableStyle 对象是只读的。 只读。
+      对于集合中的每一项: 指定此 PivotTableStyle 对象是否为只读。 只读。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: readOnly
     fullName: readOnly
