--- a/docs/docs-ref-autogen/excel/excel.interfaces.pivottablestyleloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.pivottablestyleloadoptions.yml
@@ -4,7 +4,7 @@ items:
     summary: |-
       表示通过数据透视表区域定义样式元素的数据透视表样式。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: Excel.Interfaces.PivotTableStyleLoadOptions
     fullName: Excel.Interfaces.PivotTableStyleLoadOptions
@@ -32,7 +32,7 @@ items:
     summary: |-
       获取 PivotTableStyle 的名称。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: name
     fullName: name
@@ -46,9 +46,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.PivotTableStyleLoadOptions.readOnly
     summary: |-
-      True 表示此 PivotTableStyle 对象为只读。 只读。
+      指定此 PivotTableStyle 对象是否为只读。 只读。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: readOnly
     fullName: readOnly
