--- a/docs/docs-ref-autogen/excel/excel.interfaces.timelinestyledata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.timelinestyledata.yml
@@ -15,7 +15,7 @@ items:
     summary: |-
       获取 TimelineStyle 的名称。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: name
     fullName: name
@@ -29,9 +29,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.TimelineStyleData.readOnly
     summary: |-
-      True 表示此 TimelineStyle 对象为只读。 只读。
+      指定此 TimelineStyle 对象是否为只读。 只读。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: readOnly
     fullName: readOnly
