--- a/docs/docs-ref-autogen/excel/excel.slicerstyle.yml
+++ b/docs/docs-ref-autogen/excel/excel.slicerstyle.yml
@@ -4,7 +4,7 @@ items:
     summary: |-
       表示一个切片器样式, 该样式按切片器区域定义样式元素。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: Excel.SlicerStyle
     fullName: Excel.SlicerStyle
@@ -43,7 +43,7 @@ items:
     summary: |-
       删除 SlicerStyle。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: delete()
     fullName: delete()
@@ -60,7 +60,7 @@ items:
     summary: |-
       使用所有样式元素的副本创建此 SlicerStyle 的副本。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: duplicate()
     fullName: duplicate()
@@ -82,7 +82,7 @@ items:
 
       `load(option?: { select?: string; expand?: string; }): Excel.SlicerStyle`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.SlicerStyle`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.SlicerStyle`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
     isPreview: true
     name: load(option)
     fullName: load(option)
@@ -142,7 +142,7 @@ items:
     summary: |-
       获取 SlicerStyle 的名称。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: name
     fullName: name
@@ -156,9 +156,9 @@ items:
           - string
   - uid: excel.Excel.SlicerStyle.readOnly
     summary: |-
-      True 表示此 SlicerStyle 对象为只读。 只读。
+      指定此 SlicerStyle 对象是否为只读。 只读。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: readOnly
     fullName: readOnly
