--- a/docs/docs-ref-autogen/excel/excel.workbook.yml
+++ b/docs/docs-ref-autogen/excel/excel.workbook.yml
@@ -298,7 +298,7 @@ items:
           ```
   - uid: excel.Excel.Workbook.getActiveChart
     summary: |-
-      获取工作簿中的当前活动图表。 如果没有活动图表，则在调用此语句时将引发异常
+      获取工作簿中的当前活动图表。 如果没有活动图表, 则会引发异常。
 
       \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getActiveChart()
@@ -314,7 +314,7 @@ items:
         description: ''
   - uid: excel.Excel.Workbook.getActiveChartOrNullObject
     summary: |-
-      获取工作簿中的当前活动图表。 如果没有活动图表，则返回 null 对象
+      获取工作簿中的当前活动图表。 如果没有活动图表, 则返回 null 对象。
 
       \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getActiveChartOrNullObject()
@@ -330,7 +330,7 @@ items:
         description: ''
   - uid: excel.Excel.Workbook.getActiveSlicer
     summary: |-
-      获取工作簿中当前处于活动状态的切片器。 如果没有活动切片器，则在调用此语句时将引发异常。
+      获取工作簿中当前处于活动状态的切片器。 如果没有处于活动状态的切片器，则会引发异常情况。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -347,7 +347,7 @@ items:
         description: ''
   - uid: excel.Excel.Workbook.getActiveSlicerOrNullObject
     summary: |-
-      获取工作簿中当前处于活动状态的切片器。 如果没有活动切片器，则返回 null 对象
+      获取工作簿中当前处于活动状态的切片器。 如果没有处于活动状态的切片器，则返回 null 对象。
 
       \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
