--- a/docs/docs-ref-autogen/excel/excel.worksheetcolumnsortedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.worksheetcolumnsortedeventargs.yml
@@ -4,7 +4,7 @@ items:
     summary: |-
       提供有关引发了 ColumnSorted 事件的工作表的信息。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: Excel.WorksheetColumnSortedEventArgs
     fullName: Excel.WorksheetColumnSortedEventArgs
@@ -19,9 +19,9 @@ items:
       - excel.Excel.WorksheetColumnSortedEventArgs.worksheetId
   - uid: excel.Excel.WorksheetColumnSortedEventArgs.address
     summary: |-
-      获取区域地址, 该地址表示特定工作表的已排序区域。
+      获取区域地址，该地址表示特定工作表上的选定区域。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: address
     fullName: address
@@ -37,7 +37,7 @@ items:
     summary: |-
       获取事件源。 有关详细信息，请参阅 Excel.EventSource。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: source
     fullName: source
@@ -53,7 +53,7 @@ items:
     summary: |-
       获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: type
     fullName: type
@@ -69,7 +69,7 @@ items:
     summary: |-
       获取发生排序的工作表的 id。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: worksheetId
     fullName: worksheetId
