commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel.worksheetsingleclickedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.worksheetsingleclickedeventargs.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.WorksheetSingleClickedEventArgs
     summary: |-
-      <span data-ttu-id="79046-101">提供有关引发了左键单击或点击过的事件的工作表的信息。</span><span class="sxs-lookup"><span data-stu-id="79046-101">Provides information about the worksheet that raised the left-clicked/tapped event.</span></span>
+      <span data-ttu-id="724cd-101">提供有关引发了左键单击或点击过的事件的工作表的信息。</span><span class="sxs-lookup"><span data-stu-id="724cd-101">Provides information about the worksheet that raised the left-clicked/tapped event.</span></span>
 
-      <span data-ttu-id="79046-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="79046-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="724cd-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="724cd-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: Excel.WorksheetSingleClickedEventArgs
     fullName: Excel.WorksheetSingleClickedEventArgs
@@ -20,9 +20,9 @@ items:
       - excel.Excel.WorksheetSingleClickedEventArgs.worksheetId
   - uid: excel.Excel.WorksheetSingleClickedEventArgs.address
     summary: |-
-      <span data-ttu-id="79046-103">获取表示特定工作表的已左键单击/点击的单元格的地址。</span><span class="sxs-lookup"><span data-stu-id="79046-103">Gets the address that represents the cell which was left-clicked/tapped for a specific worksheet.</span></span>
+      <span data-ttu-id="724cd-103">获取特定工作表中表示被左键单击/点击的单元格的地址。</span><span class="sxs-lookup"><span data-stu-id="724cd-103">Gets the address that represents the cell which was left-clicked/tapped for a specific worksheet.</span></span>
 
-      <span data-ttu-id="79046-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="79046-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="724cd-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="724cd-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: address
     fullName: address
@@ -36,9 +36,9 @@ items:
           - string
   - uid: excel.Excel.WorksheetSingleClickedEventArgs.offsetX
     summary: |-
-      <span data-ttu-id="79046-105">它是一个双精度值, 以磅为单位, 从左击或点击的单元格的左侧 (右边的 RTL) 网格线边缘。</span><span class="sxs-lookup"><span data-stu-id="79046-105">It is a double value that represents the distance, in points, from the left-clicked/tapped point to the left(right for RTL) gridline edge of the left-clicked/tapped cell.</span></span>
+      <span data-ttu-id="724cd-105">从左键单击/点击的点到左键单击/点击的单元格的左（RTL 则为右侧）网格线边缘的距离（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="724cd-105">The distance, in points, from the left-clicked/tapped point to the left (right for RTL) gridline edge of the left-clicked/tapped cell.</span></span>
 
-      <span data-ttu-id="79046-106">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="79046-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="724cd-106">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="724cd-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: offsetX
     fullName: offsetX
@@ -52,9 +52,9 @@ items:
           - number
   - uid: excel.Excel.WorksheetSingleClickedEventArgs.offsetY
     summary: |-
-      <span data-ttu-id="79046-107">它是一个双精度值, 以磅为单位表示从左击或点击的单元格的上一个网格线边缘的距离 (以磅为单位)。</span><span class="sxs-lookup"><span data-stu-id="79046-107">It is a double value that represents the distance, in points, from the left-clicked/tapped point to the top gridline edge of the left-clicked/tapped cell.</span></span>
+      <span data-ttu-id="724cd-107">从左键单击/点击的点到左键单击/点击的单元格的顶部网格线边缘的距离（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="724cd-107">The distance, in points, from the left-clicked/tapped point to the top gridline edge of the left-clicked/tapped cell.</span></span>
 
-      <span data-ttu-id="79046-108">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="79046-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="724cd-108">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="724cd-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: offsetY
     fullName: offsetY
@@ -68,9 +68,9 @@ items:
           - number
   - uid: excel.Excel.WorksheetSingleClickedEventArgs.type
     summary: |-
-      <span data-ttu-id="79046-109">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="79046-109">Gets the type of the event.</span></span>
+      <span data-ttu-id="724cd-109">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="724cd-109">Gets the type of the event.</span></span>
 
-      <span data-ttu-id="79046-110">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="79046-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="724cd-110">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="724cd-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: type
     fullName: type
@@ -84,9 +84,9 @@ items:
           - '"WorksheetSingleClicked"'
   - uid: excel.Excel.WorksheetSingleClickedEventArgs.worksheetId
     summary: |-
-      <span data-ttu-id="79046-111">获取已在其中单击或点击单元格的工作表的 id。</span><span class="sxs-lookup"><span data-stu-id="79046-111">Gets the id of the worksheet in which the cell was left-clicked/tapped.</span></span>
+      <span data-ttu-id="724cd-111">获取已在其中左键单击/点击单元格的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="724cd-111">Gets the id of the worksheet in which the cell was left-clicked/tapped.</span></span>
 
-      <span data-ttu-id="79046-112">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="79046-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="724cd-112">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="724cd-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: worksheetId
     fullName: worksheetId
