--- a/docs/docs-ref-autogen/excel/excel.interfaces.pivottablestylecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.pivottablestylecollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.Interfaces.PivotTableStyleCollectionLoadOptions
     summary: |-
-      <span data-ttu-id="cd8e4-101">代表数据透视表样式的集合。</span><span class="sxs-lookup"><span data-stu-id="cd8e4-101">Represents a collection of PivotTable styles.</span></span>
+      <span data-ttu-id="1b019-101">代表数据透视表样式的集合。</span><span class="sxs-lookup"><span data-stu-id="1b019-101">Represents a collection of PivotTable styles.</span></span>
 
-      <span data-ttu-id="cd8e4-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cd8e4-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1b019-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1b019-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: Excel.Interfaces.PivotTableStyleCollectionLoadOptions
     fullName: Excel.Interfaces.PivotTableStyleCollectionLoadOptions
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.PivotTableStyleCollectionLoadOptions.name
     summary: |-
-      <span data-ttu-id="cd8e4-103">对于集合中的每一项: 获取 PivotTableStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="cd8e4-103">For EACH ITEM in the collection: Gets the name of the PivotTableStyle.</span></span>
+      <span data-ttu-id="1b019-103">对于集合中的每一项: 获取 PivotTableStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="1b019-103">For EACH ITEM in the collection: Gets the name of the PivotTableStyle.</span></span>
 
-      <span data-ttu-id="cd8e4-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cd8e4-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1b019-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1b019-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: name
     fullName: name
@@ -46,9 +46,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.PivotTableStyleCollectionLoadOptions.readOnly
     summary: |-
-      <span data-ttu-id="cd8e4-105">对于集合中的每一项: True 表示此 PivotTableStyle 对象是只读的。</span><span class="sxs-lookup"><span data-stu-id="cd8e4-105">For EACH ITEM in the collection: True means that this PivotTableStyle object is read-only.</span></span> <span data-ttu-id="cd8e4-106">只读。</span><span class="sxs-lookup"><span data-stu-id="cd8e4-106">Read-only.</span></span>
+      <span data-ttu-id="1b019-105">对于集合中的每一项: 指定此 PivotTableStyle 对象是否为只读。</span><span class="sxs-lookup"><span data-stu-id="1b019-105">For EACH ITEM in the collection: Specifies if this PivotTableStyle object is read-only.</span></span> <span data-ttu-id="1b019-106">只读。</span><span class="sxs-lookup"><span data-stu-id="1b019-106">Read-only.</span></span>
 
-      <span data-ttu-id="cd8e4-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cd8e4-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="1b019-107">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1b019-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: readOnly
     fullName: readOnly
