--- a/docs/docs-ref-autogen/excel/excel.interfaces.pivottablestyleloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.pivottablestyleloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.Interfaces.PivotTableStyleLoadOptions
     summary: |-
-      <span data-ttu-id="f36a3-101">表示通过数据透视表区域定义样式元素的数据透视表样式。</span><span class="sxs-lookup"><span data-stu-id="f36a3-101">Represents a PivotTable Style, which defines style elements by PivotTable region.</span></span>
+      <span data-ttu-id="05b84-101">表示通过数据透视表区域定义样式元素的数据透视表样式。</span><span class="sxs-lookup"><span data-stu-id="05b84-101">Represents a PivotTable Style, which defines style elements by PivotTable region.</span></span>
 
-      <span data-ttu-id="f36a3-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f36a3-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="05b84-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="05b84-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: Excel.Interfaces.PivotTableStyleLoadOptions
     fullName: Excel.Interfaces.PivotTableStyleLoadOptions
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.PivotTableStyleLoadOptions.name
     summary: |-
-      <span data-ttu-id="f36a3-103">获取 PivotTableStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="f36a3-103">Gets the name of the PivotTableStyle.</span></span>
+      <span data-ttu-id="05b84-103">获取 PivotTableStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="05b84-103">Gets the name of the PivotTableStyle.</span></span>
 
-      <span data-ttu-id="f36a3-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f36a3-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="05b84-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="05b84-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: name
     fullName: name
@@ -46,9 +46,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.PivotTableStyleLoadOptions.readOnly
     summary: |-
-      <span data-ttu-id="f36a3-105">True 表示此 PivotTableStyle 对象为只读。</span><span class="sxs-lookup"><span data-stu-id="f36a3-105">True means that this PivotTableStyle object is read-only.</span></span> <span data-ttu-id="f36a3-106">只读。</span><span class="sxs-lookup"><span data-stu-id="f36a3-106">Read-only.</span></span>
+      <span data-ttu-id="05b84-105">指定此 PivotTableStyle 对象是否为只读。</span><span class="sxs-lookup"><span data-stu-id="05b84-105">Specifies if this PivotTableStyle object is read-only.</span></span> <span data-ttu-id="05b84-106">只读。</span><span class="sxs-lookup"><span data-stu-id="05b84-106">Read-only.</span></span>
 
-      <span data-ttu-id="f36a3-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f36a3-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="05b84-107">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="05b84-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: readOnly
     fullName: readOnly
