--- a/docs/docs-ref-autogen/excel/excel.interfaces.slicerstylecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.slicerstylecollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.Interfaces.SlicerStyleCollectionLoadOptions
     summary: |-
-      <span data-ttu-id="db2c0-101">表示 SlicerStyle 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="db2c0-101">Represents a collection of SlicerStyle objects.</span></span>
+      <span data-ttu-id="e5007-101">表示 SlicerStyle 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="e5007-101">Represents a collection of SlicerStyle objects.</span></span>
 
-      <span data-ttu-id="db2c0-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db2c0-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e5007-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5007-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: Excel.Interfaces.SlicerStyleCollectionLoadOptions
     fullName: Excel.Interfaces.SlicerStyleCollectionLoadOptions
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerStyleCollectionLoadOptions.name
     summary: |-
-      <span data-ttu-id="db2c0-103">对于集合中的每一项: 获取 SlicerStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="db2c0-103">For EACH ITEM in the collection: Gets the name of the SlicerStyle.</span></span>
+      <span data-ttu-id="e5007-103">对于集合中的每一项: 获取 SlicerStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="e5007-103">For EACH ITEM in the collection: Gets the name of the SlicerStyle.</span></span>
 
-      <span data-ttu-id="db2c0-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db2c0-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e5007-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5007-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: name
     fullName: name
@@ -46,9 +46,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerStyleCollectionLoadOptions.readOnly
     summary: |-
-      <span data-ttu-id="db2c0-105">对于集合中的每一项: True 表示此 SlicerStyle 对象是只读的。</span><span class="sxs-lookup"><span data-stu-id="db2c0-105">For EACH ITEM in the collection: True means that this SlicerStyle object is read-only.</span></span> <span data-ttu-id="db2c0-106">只读。</span><span class="sxs-lookup"><span data-stu-id="db2c0-106">Read-only.</span></span>
+      <span data-ttu-id="e5007-105">对于集合中的每一项: 指定此 SlicerStyle 对象是否为只读。</span><span class="sxs-lookup"><span data-stu-id="e5007-105">For EACH ITEM in the collection: Specifies if this SlicerStyle object is read-only.</span></span> <span data-ttu-id="e5007-106">只读。</span><span class="sxs-lookup"><span data-stu-id="e5007-106">Read-only.</span></span>
 
-      <span data-ttu-id="db2c0-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db2c0-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e5007-107">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5007-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: readOnly
     fullName: readOnly
