--- a/docs/docs-ref-autogen/excel/excel.interfaces.slicerstyleloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.slicerstyleloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.Interfaces.SlicerStyleLoadOptions
     summary: |-
-      <span data-ttu-id="c4cc3-101">表示一个切片器样式, 该样式按切片器区域定义样式元素。</span><span class="sxs-lookup"><span data-stu-id="c4cc3-101">Represents a Slicer Style, which defines style elements by region of the slicer.</span></span>
+      <span data-ttu-id="2441e-101">表示一个切片器样式, 该样式按切片器区域定义样式元素。</span><span class="sxs-lookup"><span data-stu-id="2441e-101">Represents a Slicer Style, which defines style elements by region of the slicer.</span></span>
 
-      <span data-ttu-id="c4cc3-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c4cc3-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2441e-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2441e-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: Excel.Interfaces.SlicerStyleLoadOptions
     fullName: Excel.Interfaces.SlicerStyleLoadOptions
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerStyleLoadOptions.name
     summary: |-
-      <span data-ttu-id="c4cc3-103">获取 SlicerStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="c4cc3-103">Gets the name of the SlicerStyle.</span></span>
+      <span data-ttu-id="2441e-103">获取 SlicerStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="2441e-103">Gets the name of the SlicerStyle.</span></span>
 
-      <span data-ttu-id="c4cc3-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c4cc3-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2441e-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2441e-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: name
     fullName: name
@@ -46,9 +46,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.SlicerStyleLoadOptions.readOnly
     summary: |-
-      <span data-ttu-id="c4cc3-105">True 表示此 SlicerStyle 对象为只读。</span><span class="sxs-lookup"><span data-stu-id="c4cc3-105">True means that this SlicerStyle object is read-only.</span></span> <span data-ttu-id="c4cc3-106">只读。</span><span class="sxs-lookup"><span data-stu-id="c4cc3-106">Read-only.</span></span>
+      <span data-ttu-id="2441e-105">指定此 SlicerStyle 对象是否为只读。</span><span class="sxs-lookup"><span data-stu-id="2441e-105">Specifies if this SlicerStyle object is read-only.</span></span> <span data-ttu-id="2441e-106">只读。</span><span class="sxs-lookup"><span data-stu-id="2441e-106">Read-only.</span></span>
 
-      <span data-ttu-id="c4cc3-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c4cc3-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="2441e-107">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2441e-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: readOnly
     fullName: readOnly
