--- a/docs/docs-ref-autogen/excel/excel.interfaces.tablestylecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.tablestylecollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.Interfaces.TableStyleCollectionLoadOptions
     summary: |-
-      <span data-ttu-id="dafb9-101">表示 TableStyles 的集合。</span><span class="sxs-lookup"><span data-stu-id="dafb9-101">Represents a collection of TableStyles.</span></span>
+      <span data-ttu-id="747f4-101">表示 TableStyles 的集合。</span><span class="sxs-lookup"><span data-stu-id="747f4-101">Represents a collection of TableStyles.</span></span>
 
-      <span data-ttu-id="dafb9-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dafb9-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="747f4-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="747f4-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: Excel.Interfaces.TableStyleCollectionLoadOptions
     fullName: Excel.Interfaces.TableStyleCollectionLoadOptions
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.TableStyleCollectionLoadOptions.name
     summary: |-
-      <span data-ttu-id="dafb9-103">对于集合中的每一项: 获取 TableStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="dafb9-103">For EACH ITEM in the collection: Gets the name of the TableStyle.</span></span>
+      <span data-ttu-id="747f4-103">对于集合中的每一项: 获取 TableStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="747f4-103">For EACH ITEM in the collection: Gets the name of the TableStyle.</span></span>
 
-      <span data-ttu-id="dafb9-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dafb9-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="747f4-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="747f4-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: name
     fullName: name
@@ -46,9 +46,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.TableStyleCollectionLoadOptions.readOnly
     summary: |-
-      <span data-ttu-id="dafb9-105">对于集合中的每一项: True 表示此 TableStyle 对象是只读的。</span><span class="sxs-lookup"><span data-stu-id="dafb9-105">For EACH ITEM in the collection: True means that this TableStyle object is read-only.</span></span> <span data-ttu-id="dafb9-106">只读。</span><span class="sxs-lookup"><span data-stu-id="dafb9-106">Read-only.</span></span>
+      <span data-ttu-id="747f4-105">对于集合中的每一项: 指定此 TableStyle 对象是否为只读。</span><span class="sxs-lookup"><span data-stu-id="747f4-105">For EACH ITEM in the collection: Specifies if this TableStyle object is read-only.</span></span> <span data-ttu-id="747f4-106">只读。</span><span class="sxs-lookup"><span data-stu-id="747f4-106">Read-only.</span></span>
 
-      <span data-ttu-id="dafb9-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dafb9-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="747f4-107">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="747f4-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: readOnly
     fullName: readOnly
