--- a/docs/docs-ref-autogen/excel/excel.interfaces.tablestyledata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.tablestyledata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.Interfaces.TableStyleData
-    summary: <span data-ttu-id="ea5e9-101">描述通过调用 "tableStyle ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="ea5e9-101">An interface describing the data returned by calling "tableStyle.toJSON()".</span></span>
+    summary: <span data-ttu-id="16e87-101">描述通过调用 "tableStyle ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="16e87-101">An interface describing the data returned by calling "tableStyle.toJSON()".</span></span>
     name: Excel.Interfaces.TableStyleData
     fullName: Excel.Interfaces.TableStyleData
     langs:
@@ -13,9 +13,9 @@ items:
       - excel.Excel.Interfaces.TableStyleData.readOnly
   - uid: excel.Excel.Interfaces.TableStyleData.name
     summary: |-
-      <span data-ttu-id="ea5e9-102">获取 TableStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="ea5e9-102">Gets the name of the TableStyle.</span></span>
+      <span data-ttu-id="16e87-102">获取 TableStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="16e87-102">Gets the name of the TableStyle.</span></span>
 
-      <span data-ttu-id="ea5e9-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea5e9-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="16e87-103">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="16e87-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: name
     fullName: name
@@ -29,9 +29,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.TableStyleData.readOnly
     summary: |-
-      <span data-ttu-id="ea5e9-104">True 表示此 TableStyle 对象为只读。</span><span class="sxs-lookup"><span data-stu-id="ea5e9-104">True means that this TableStyle object is read-only.</span></span> <span data-ttu-id="ea5e9-105">只读。</span><span class="sxs-lookup"><span data-stu-id="ea5e9-105">Read-only.</span></span>
+      <span data-ttu-id="16e87-104">指定此 TableStyle 对象是否为只读。</span><span class="sxs-lookup"><span data-stu-id="16e87-104">Specifies if this TableStyle object is read-only.</span></span> <span data-ttu-id="16e87-105">只读。</span><span class="sxs-lookup"><span data-stu-id="16e87-105">Read-only.</span></span>
 
-      <span data-ttu-id="ea5e9-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea5e9-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="16e87-106">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="16e87-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: readOnly
     fullName: readOnly
