--- a/docs/docs-ref-autogen/excel/excel.interfaces.tablestyleloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.tablestyleloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.Interfaces.TableStyleLoadOptions
     summary: |-
-      <span data-ttu-id="fa7d6-101">表示一个 TableStyle, 它按表的区域定义样式元素。</span><span class="sxs-lookup"><span data-stu-id="fa7d6-101">Represents a TableStyle, which defines the style elements by region of the Table.</span></span>
+      <span data-ttu-id="526f5-101">表示一个 TableStyle, 它按表的区域定义样式元素。</span><span class="sxs-lookup"><span data-stu-id="526f5-101">Represents a TableStyle, which defines the style elements by region of the Table.</span></span>
 
-      <span data-ttu-id="fa7d6-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa7d6-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="526f5-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="526f5-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: Excel.Interfaces.TableStyleLoadOptions
     fullName: Excel.Interfaces.TableStyleLoadOptions
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.TableStyleLoadOptions.name
     summary: |-
-      <span data-ttu-id="fa7d6-103">获取 TableStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="fa7d6-103">Gets the name of the TableStyle.</span></span>
+      <span data-ttu-id="526f5-103">获取 TableStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="526f5-103">Gets the name of the TableStyle.</span></span>
 
-      <span data-ttu-id="fa7d6-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa7d6-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="526f5-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="526f5-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: name
     fullName: name
@@ -46,9 +46,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.TableStyleLoadOptions.readOnly
     summary: |-
-      <span data-ttu-id="fa7d6-105">True 表示此 TableStyle 对象为只读。</span><span class="sxs-lookup"><span data-stu-id="fa7d6-105">True means that this TableStyle object is read-only.</span></span> <span data-ttu-id="fa7d6-106">只读。</span><span class="sxs-lookup"><span data-stu-id="fa7d6-106">Read-only.</span></span>
+      <span data-ttu-id="526f5-105">指定此 TableStyle 对象是否为只读。</span><span class="sxs-lookup"><span data-stu-id="526f5-105">Specifies if this TableStyle object is read-only.</span></span> <span data-ttu-id="526f5-106">只读。</span><span class="sxs-lookup"><span data-stu-id="526f5-106">Read-only.</span></span>
 
-      <span data-ttu-id="fa7d6-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fa7d6-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="526f5-107">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="526f5-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: readOnly
     fullName: readOnly
