--- a/docs/docs-ref-autogen/excel/excel.interfaces.tableupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.tableupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.Interfaces.TableUpdateData
-    summary: '<span data-ttu-id="f8790-101">一个用于更新 table 对象上的数据的接口, 可用于 "table. set (</span><span class="sxs-lookup"><span data-stu-id="f8790-101">An interface for updating data on the Table object, for use in "table.set(</span></span><!-- --><span data-ttu-id="f8790-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="f8790-102"></span></span><!-- --><span data-ttu-id="f8790-103">)".</span><span class="sxs-lookup"><span data-stu-id="f8790-103"></span></span>'
+    summary: '<span data-ttu-id="adbe3-101">一个用于更新 Table 对象上的数据的接口, 可用于 "table。 set (</span><span class="sxs-lookup"><span data-stu-id="adbe3-101">An interface for updating data on the Table object, for use in "table.set(</span></span><!-- --><span data-ttu-id="adbe3-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="adbe3-102"></span></span><!-- --><span data-ttu-id="adbe3-103">)".</span><span class="sxs-lookup"><span data-stu-id="adbe3-103"></span></span>'
     name: Excel.Interfaces.TableUpdateData
     fullName: Excel.Interfaces.TableUpdateData
     langs:
@@ -20,9 +20,9 @@ items:
       - excel.Excel.Interfaces.TableUpdateData.style
   - uid: excel.Excel.Interfaces.TableUpdateData.highlightFirstColumn
     summary: |-
-      <span data-ttu-id="f8790-104">指明第一列是否包含特殊格式。</span><span class="sxs-lookup"><span data-stu-id="f8790-104">Indicates whether the first column contains special formatting.</span></span>
+      <span data-ttu-id="adbe3-104">指明第一列是否包含特殊格式。</span><span class="sxs-lookup"><span data-stu-id="adbe3-104">Indicates whether the first column contains special formatting.</span></span>
 
-      <span data-ttu-id="f8790-105">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f8790-105">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="adbe3-105">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="adbe3-105">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: highlightFirstColumn
     fullName: highlightFirstColumn
     langs:
@@ -35,9 +35,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.TableUpdateData.highlightLastColumn
     summary: |-
-      <span data-ttu-id="f8790-106">指明最后一列是否包含特殊格式。</span><span class="sxs-lookup"><span data-stu-id="f8790-106">Indicates whether the last column contains special formatting.</span></span>
+      <span data-ttu-id="adbe3-106">指明最后一列是否包含特殊格式。</span><span class="sxs-lookup"><span data-stu-id="adbe3-106">Indicates whether the last column contains special formatting.</span></span>
 
-      <span data-ttu-id="f8790-107">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f8790-107">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="adbe3-107">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="adbe3-107">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: highlightLastColumn
     fullName: highlightLastColumn
     langs:
@@ -50,9 +50,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.TableUpdateData.name
     summary: |-
-      <span data-ttu-id="f8790-108">表的名称。</span><span class="sxs-lookup"><span data-stu-id="f8790-108">Name of the table.</span></span>
+      <span data-ttu-id="adbe3-108">表的名称。</span><span class="sxs-lookup"><span data-stu-id="adbe3-108">Name of the table.</span></span>
 
-      <span data-ttu-id="f8790-109">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f8790-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="adbe3-109">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="adbe3-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -65,9 +65,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.TableUpdateData.showBandedColumns
     summary: |-
-      <span data-ttu-id="f8790-110">指明列是否采用镶边格式来以不同的方式突出显示奇数列与偶数列，让表更易于阅读。</span><span class="sxs-lookup"><span data-stu-id="f8790-110">Indicates whether the columns show banded formatting in which odd columns are highlighted differently from even ones to make reading the table easier.</span></span>
+      <span data-ttu-id="adbe3-110">指明列是否采用镶边格式来以不同的方式突出显示奇数列与偶数列，让表更易于阅读。</span><span class="sxs-lookup"><span data-stu-id="adbe3-110">Indicates whether the columns show banded formatting in which odd columns are highlighted differently from even ones to make reading the table easier.</span></span>
 
-      <span data-ttu-id="f8790-111">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f8790-111">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="adbe3-111">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="adbe3-111">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showBandedColumns
     fullName: showBandedColumns
     langs:
@@ -80,9 +80,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.TableUpdateData.showBandedRows
     summary: |-
-      <span data-ttu-id="f8790-112">指明行是否采用镶边格式来以不同的方式突出显示奇数行与偶数行，让表更易于阅读。</span><span class="sxs-lookup"><span data-stu-id="f8790-112">Indicates whether the rows show banded formatting in which odd rows are highlighted differently from even ones to make reading the table easier.</span></span>
+      <span data-ttu-id="adbe3-112">指明行是否采用镶边格式来以不同的方式突出显示奇数行与偶数行，让表更易于阅读。</span><span class="sxs-lookup"><span data-stu-id="adbe3-112">Indicates whether the rows show banded formatting in which odd rows are highlighted differently from even ones to make reading the table easier.</span></span>
 
-      <span data-ttu-id="f8790-113">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f8790-113">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="adbe3-113">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="adbe3-113">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showBandedRows
     fullName: showBandedRows
     langs:
@@ -95,9 +95,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.TableUpdateData.showFilterButton
     summary: |-
-      <span data-ttu-id="f8790-p101">指明是否在每个列标题的顶部显示筛选器按钮。仅当 table 中包含标题行时，才允许设定此设置。</span><span class="sxs-lookup"><span data-stu-id="f8790-p101">Indicates whether the filter buttons are visible at the top of each column header. Setting this is only allowed if the table contains a header row.</span></span>
+      <span data-ttu-id="adbe3-p101">指明是否在每个列标题的顶部显示筛选器按钮。仅当 table 中包含标题行时，才允许设定此设置。</span><span class="sxs-lookup"><span data-stu-id="adbe3-p101">Indicates whether the filter buttons are visible at the top of each column header. Setting this is only allowed if the table contains a header row.</span></span>
 
-      <span data-ttu-id="f8790-116">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f8790-116">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="adbe3-116">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="adbe3-116">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showFilterButton
     fullName: showFilterButton
     langs:
@@ -110,9 +110,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.TableUpdateData.showHeaders
     summary: |-
-      <span data-ttu-id="f8790-117">指示标头行是否可见。</span><span class="sxs-lookup"><span data-stu-id="f8790-117">Indicates whether the header row is visible or not.</span></span> <span data-ttu-id="f8790-118">该值可以设置为显示或删除标头行。</span><span class="sxs-lookup"><span data-stu-id="f8790-118">This value can be set to show or remove the header row.</span></span>
+      <span data-ttu-id="adbe3-117">指示标头行是否可见。</span><span class="sxs-lookup"><span data-stu-id="adbe3-117">Indicates whether the header row is visible or not.</span></span> <span data-ttu-id="adbe3-118">该值可以设置为显示或删除标头行。</span><span class="sxs-lookup"><span data-stu-id="adbe3-118">This value can be set to show or remove the header row.</span></span>
 
-      <span data-ttu-id="f8790-119">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f8790-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="adbe3-119">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="adbe3-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showHeaders
     fullName: showHeaders
     langs:
@@ -125,9 +125,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.TableUpdateData.showTotals
     summary: |-
-      <span data-ttu-id="f8790-120">指示总计行是否可见。</span><span class="sxs-lookup"><span data-stu-id="f8790-120">Indicates whether the total row is visible or not.</span></span> <span data-ttu-id="f8790-121">该值可以设置为显示或删除总计行。</span><span class="sxs-lookup"><span data-stu-id="f8790-121">This value can be set to show or remove the total row.</span></span>
+      <span data-ttu-id="adbe3-120">指示总计行是否可见。</span><span class="sxs-lookup"><span data-stu-id="adbe3-120">Indicates whether the total row is visible or not.</span></span> <span data-ttu-id="adbe3-121">该值可以设置为显示或删除总计行。</span><span class="sxs-lookup"><span data-stu-id="adbe3-121">This value can be set to show or remove the total row.</span></span>
 
-      <span data-ttu-id="f8790-122">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f8790-122">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="adbe3-122">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="adbe3-122">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: showTotals
     fullName: showTotals
     langs:
@@ -140,9 +140,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.TableUpdateData.style
     summary: |-
-      <span data-ttu-id="f8790-p104">表示表格样式的常量值。可能的值是：TableStyleLight1 thru TableStyleLight21、TableStyleMedium1 thru TableStyleMedium28、TableStyleStyleDark1 thru TableStyleStyleDark11。还可以指定工作簿中显示的用户定义的自定义样式。</span><span class="sxs-lookup"><span data-stu-id="f8790-p104">Constant value that represents the Table style. Possible values are: TableStyleLight1 thru TableStyleLight21, TableStyleMedium1 thru TableStyleMedium28, TableStyleStyleDark1 thru TableStyleStyleDark11. A custom user-defined style present in the workbook can also be specified.</span></span>
+      <span data-ttu-id="adbe3-123">表示表格样式的常量值。</span><span class="sxs-lookup"><span data-stu-id="adbe3-123">Constant value that represents the Table style.</span></span> <span data-ttu-id="adbe3-124">可能的值是：TableStyleLight1 through TableStyleLight21、TableStyleMedium1 through TableStyleMedium28、TableStyleStyleDark1 through TableStyleStyleDark11。</span><span class="sxs-lookup"><span data-stu-id="adbe3-124">Possible values are: TableStyleLight1 through TableStyleLight21, TableStyleMedium1 through TableStyleMedium28, TableStyleStyleDark1 through TableStyleStyleDark11.</span></span> <span data-ttu-id="adbe3-125">还可以指定工作簿中显示的用户定义的自定义样式。</span><span class="sxs-lookup"><span data-stu-id="adbe3-125">A custom user-defined style present in the workbook can also be specified.</span></span>
 
-      <span data-ttu-id="f8790-126">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f8790-126">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="adbe3-126">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="adbe3-126">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: style
     fullName: style
     langs:
