--- a/docs/docs-ref-autogen/excel/excel.interfaces.timelinestylecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.timelinestylecollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.Interfaces.TimelineStyleCollectionLoadOptions
     summary: |-
-      <span data-ttu-id="da25e-101">表示 TimelineStyles 的集合。</span><span class="sxs-lookup"><span data-stu-id="da25e-101">Represents a collection of TimelineStyles.</span></span>
+      <span data-ttu-id="403a9-101">表示 TimelineStyles 的集合。</span><span class="sxs-lookup"><span data-stu-id="403a9-101">Represents a collection of TimelineStyles.</span></span>
 
-      <span data-ttu-id="da25e-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="da25e-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="403a9-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="403a9-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: Excel.Interfaces.TimelineStyleCollectionLoadOptions
     fullName: Excel.Interfaces.TimelineStyleCollectionLoadOptions
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.TimelineStyleCollectionLoadOptions.name
     summary: |-
-      <span data-ttu-id="da25e-103">对于集合中的每一项: 获取 TimelineStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="da25e-103">For EACH ITEM in the collection: Gets the name of the TimelineStyle.</span></span>
+      <span data-ttu-id="403a9-103">对于集合中的每一项: 获取 TimelineStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="403a9-103">For EACH ITEM in the collection: Gets the name of the TimelineStyle.</span></span>
 
-      <span data-ttu-id="da25e-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="da25e-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="403a9-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="403a9-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: name
     fullName: name
@@ -46,9 +46,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.TimelineStyleCollectionLoadOptions.readOnly
     summary: |-
-      <span data-ttu-id="da25e-105">对于集合中的每一项: True 表示此 TimelineStyle 对象是只读的。</span><span class="sxs-lookup"><span data-stu-id="da25e-105">For EACH ITEM in the collection: True means that this TimelineStyle object is read-only.</span></span> <span data-ttu-id="da25e-106">只读。</span><span class="sxs-lookup"><span data-stu-id="da25e-106">Read-only.</span></span>
+      <span data-ttu-id="403a9-105">对于集合中的每一项: 指定此 TimelineStyle 对象是否为只读。</span><span class="sxs-lookup"><span data-stu-id="403a9-105">For EACH ITEM in the collection: Specifies if this TimelineStyle object is read-only.</span></span> <span data-ttu-id="403a9-106">只读。</span><span class="sxs-lookup"><span data-stu-id="403a9-106">Read-only.</span></span>
 
-      <span data-ttu-id="da25e-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="da25e-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="403a9-107">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="403a9-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: readOnly
     fullName: readOnly
