--- a/docs/docs-ref-autogen/excel/excel.interfaces.timelinestyledata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.timelinestyledata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.Interfaces.TimelineStyleData
-    summary: <span data-ttu-id="c6bc4-101">描述通过调用 "timelineStyle ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="c6bc4-101">An interface describing the data returned by calling "timelineStyle.toJSON()".</span></span>
+    summary: <span data-ttu-id="d6a9e-101">描述通过调用 "timelineStyle ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="d6a9e-101">An interface describing the data returned by calling "timelineStyle.toJSON()".</span></span>
     name: Excel.Interfaces.TimelineStyleData
     fullName: Excel.Interfaces.TimelineStyleData
     langs:
@@ -13,9 +13,9 @@ items:
       - excel.Excel.Interfaces.TimelineStyleData.readOnly
   - uid: excel.Excel.Interfaces.TimelineStyleData.name
     summary: |-
-      <span data-ttu-id="c6bc4-102">获取 TimelineStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="c6bc4-102">Gets the name of the TimelineStyle.</span></span>
+      <span data-ttu-id="d6a9e-102">获取 TimelineStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="d6a9e-102">Gets the name of the TimelineStyle.</span></span>
 
-      <span data-ttu-id="c6bc4-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c6bc4-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d6a9e-103">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6a9e-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: name
     fullName: name
@@ -29,9 +29,9 @@ items:
           - string
   - uid: excel.Excel.Interfaces.TimelineStyleData.readOnly
     summary: |-
-      <span data-ttu-id="c6bc4-104">True 表示此 TimelineStyle 对象为只读。</span><span class="sxs-lookup"><span data-stu-id="c6bc4-104">True means that this TimelineStyle object is read-only.</span></span> <span data-ttu-id="c6bc4-105">只读。</span><span class="sxs-lookup"><span data-stu-id="c6bc4-105">Read-only.</span></span>
+      <span data-ttu-id="d6a9e-104">指定此 TimelineStyle 对象是否为只读。</span><span class="sxs-lookup"><span data-stu-id="d6a9e-104">Specifies if this TimelineStyle object is read-only.</span></span> <span data-ttu-id="d6a9e-105">只读。</span><span class="sxs-lookup"><span data-stu-id="d6a9e-105">Read-only.</span></span>
 
-      <span data-ttu-id="c6bc4-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c6bc4-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d6a9e-106">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6a9e-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: readOnly
     fullName: readOnly
