--- a/docs/docs-ref-autogen/excel/excel.interfaces.timelinestyleloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.timelinestyleloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.Interfaces.TimelineStyleLoadOptions
     summary: |-
-      <span data-ttu-id="aff49-101">表示在时间轴中按区域定义样式元素的日程表样式。</span><span class="sxs-lookup"><span data-stu-id="aff49-101">Represents a Timeline style, which defines style elements by region in the Timeline.</span></span>
+      <span data-ttu-id="a8aa5-101">表示在时间轴中按区域定义样式元素的日程表样式。</span><span class="sxs-lookup"><span data-stu-id="a8aa5-101">Represents a Timeline style, which defines style elements by region in the Timeline.</span></span>
 
-      <span data-ttu-id="aff49-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aff49-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a8aa5-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a8aa5-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: Excel.Interfaces.TimelineStyleLoadOptions
     fullName: Excel.Interfaces.TimelineStyleLoadOptions
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.TimelineStyleLoadOptions.name
     summary: |-
-      <span data-ttu-id="aff49-103">获取 TimelineStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="aff49-103">Gets the name of the TimelineStyle.</span></span>
+      <span data-ttu-id="a8aa5-103">获取 TimelineStyle 的名称。</span><span class="sxs-lookup"><span data-stu-id="a8aa5-103">Gets the name of the TimelineStyle.</span></span>
 
-      <span data-ttu-id="aff49-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aff49-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a8aa5-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a8aa5-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: name
     fullName: name
@@ -46,9 +46,9 @@ items:
           - boolean
   - uid: excel.Excel.Interfaces.TimelineStyleLoadOptions.readOnly
     summary: |-
-      <span data-ttu-id="aff49-105">True 表示此 TimelineStyle 对象为只读。</span><span class="sxs-lookup"><span data-stu-id="aff49-105">True means that this TimelineStyle object is read-only.</span></span> <span data-ttu-id="aff49-106">只读。</span><span class="sxs-lookup"><span data-stu-id="aff49-106">Read-only.</span></span>
+      <span data-ttu-id="a8aa5-105">指定此 TimelineStyle 对象是否为只读。</span><span class="sxs-lookup"><span data-stu-id="a8aa5-105">Specifies if this TimelineStyle object is read-only.</span></span> <span data-ttu-id="a8aa5-106">只读。</span><span class="sxs-lookup"><span data-stu-id="a8aa5-106">Read-only.</span></span>
 
-      <span data-ttu-id="aff49-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aff49-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="a8aa5-107">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a8aa5-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: readOnly
     fullName: readOnly
