--- a/docs/docs-ref-autogen/excel/excel.worksheetcolumnsortedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.worksheetcolumnsortedeventargs.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.WorksheetColumnSortedEventArgs
     summary: |-
-      <span data-ttu-id="da939-101">提供有关引发了 ColumnSorted 事件的工作表的信息。</span><span class="sxs-lookup"><span data-stu-id="da939-101">Provides information about the worksheet that raised the ColumnSorted event.</span></span>
+      <span data-ttu-id="497b4-101">提供有关引发了 ColumnSorted 事件的工作表的信息。</span><span class="sxs-lookup"><span data-stu-id="497b4-101">Provides information about the worksheet that raised the ColumnSorted event.</span></span>
 
-      <span data-ttu-id="da939-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="da939-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="497b4-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="497b4-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: Excel.WorksheetColumnSortedEventArgs
     fullName: Excel.WorksheetColumnSortedEventArgs
@@ -19,9 +19,9 @@ items:
       - excel.Excel.WorksheetColumnSortedEventArgs.worksheetId
   - uid: excel.Excel.WorksheetColumnSortedEventArgs.address
     summary: |-
-      <span data-ttu-id="da939-103">获取区域地址, 该地址表示特定工作表的已排序区域。</span><span class="sxs-lookup"><span data-stu-id="da939-103">Gets the range address that represents the sorted areas of a specific worksheet.</span></span>
+      <span data-ttu-id="497b4-103">获取区域地址，该地址表示特定工作表上的选定区域。</span><span class="sxs-lookup"><span data-stu-id="497b4-103">Gets the range address that represents the sorted areas of a specific worksheet.</span></span>
 
-      <span data-ttu-id="da939-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="da939-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="497b4-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="497b4-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: address
     fullName: address
@@ -35,9 +35,9 @@ items:
           - string
   - uid: excel.Excel.WorksheetColumnSortedEventArgs.source
     summary: |-
-      <span data-ttu-id="da939-105">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="da939-105">Gets the source of the event.</span></span> <span data-ttu-id="da939-106">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="da939-106">See Excel.EventSource for details.</span></span>
+      <span data-ttu-id="497b4-105">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="497b4-105">Gets the source of the event.</span></span> <span data-ttu-id="497b4-106">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="497b4-106">See Excel.EventSource for details.</span></span>
 
-      <span data-ttu-id="da939-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="da939-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="497b4-107">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="497b4-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: source
     fullName: source
@@ -51,9 +51,9 @@ items:
           - Excel.EventSource | "Local" | "Remote"
   - uid: excel.Excel.WorksheetColumnSortedEventArgs.type
     summary: |-
-      <span data-ttu-id="da939-108">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="da939-108">Gets the type of the event.</span></span> <span data-ttu-id="da939-109">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="da939-109">See Excel.EventType for details.</span></span>
+      <span data-ttu-id="497b4-108">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="497b4-108">Gets the type of the event.</span></span> <span data-ttu-id="497b4-109">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="497b4-109">See Excel.EventType for details.</span></span>
 
-      <span data-ttu-id="da939-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="da939-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="497b4-110">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="497b4-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: type
     fullName: type
@@ -67,9 +67,9 @@ items:
           - '"WorksheetColumnSorted"'
   - uid: excel.Excel.WorksheetColumnSortedEventArgs.worksheetId
     summary: |-
-      <span data-ttu-id="da939-111">获取发生排序的工作表的 id。</span><span class="sxs-lookup"><span data-stu-id="da939-111">Gets the id of the worksheet in which the sorting happened.</span></span>
+      <span data-ttu-id="497b4-111">获取发生排序的工作表的 id。</span><span class="sxs-lookup"><span data-stu-id="497b4-111">Gets the id of the worksheet where the sorting happened.</span></span>
 
-      <span data-ttu-id="da939-112">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="da939-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="497b4-112">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="497b4-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: worksheetId
     fullName: worksheetId
