--- a/docs/docs-ref-autogen/excel/excel.worksheetrowsortedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.worksheetrowsortedeventargs.yml
@@ -2,9 +2,9 @@
 items:
   - uid: excel.Excel.WorksheetRowSortedEventArgs
     summary: |-
-      <span data-ttu-id="575d3-101">提供有关引发了 RowSorted 事件的工作表的信息。</span><span class="sxs-lookup"><span data-stu-id="575d3-101">Provides information about the worksheet that raised the RowSorted event.</span></span>
+      <span data-ttu-id="d2d05-101">提供有关引发了 RowSorted 事件的工作表的信息。</span><span class="sxs-lookup"><span data-stu-id="d2d05-101">Provides information about the worksheet that raised the RowSorted event.</span></span>
 
-      <span data-ttu-id="575d3-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="575d3-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d2d05-102">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2d05-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: Excel.WorksheetRowSortedEventArgs
     fullName: Excel.WorksheetRowSortedEventArgs
@@ -19,9 +19,9 @@ items:
       - excel.Excel.WorksheetRowSortedEventArgs.worksheetId
   - uid: excel.Excel.WorksheetRowSortedEventArgs.address
     summary: |-
-      <span data-ttu-id="575d3-103">获取区域地址, 该地址表示特定工作表的已排序区域。</span><span class="sxs-lookup"><span data-stu-id="575d3-103">Gets the range address that represents the sorted areas of a specific worksheet.</span></span>
+      <span data-ttu-id="d2d05-103">获取区域地址，该地址表示特定工作表上的选定区域。</span><span class="sxs-lookup"><span data-stu-id="d2d05-103">Gets the range address that represents the sorted areas of a specific worksheet.</span></span>
 
-      <span data-ttu-id="575d3-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="575d3-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d2d05-104">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2d05-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: address
     fullName: address
@@ -35,9 +35,9 @@ items:
           - string
   - uid: excel.Excel.WorksheetRowSortedEventArgs.source
     summary: |-
-      <span data-ttu-id="575d3-105">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="575d3-105">Gets the source of the event.</span></span> <span data-ttu-id="575d3-106">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="575d3-106">See Excel.EventSource for details.</span></span>
+      <span data-ttu-id="d2d05-105">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="d2d05-105">Gets the source of the event.</span></span> <span data-ttu-id="d2d05-106">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="d2d05-106">See Excel.EventSource for details.</span></span>
 
-      <span data-ttu-id="575d3-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="575d3-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d2d05-107">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2d05-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: source
     fullName: source
@@ -51,9 +51,9 @@ items:
           - Excel.EventSource | "Local" | "Remote"
   - uid: excel.Excel.WorksheetRowSortedEventArgs.type
     summary: |-
-      <span data-ttu-id="575d3-108">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="575d3-108">Gets the type of the event.</span></span> <span data-ttu-id="575d3-109">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="575d3-109">See Excel.EventType for details.</span></span>
+      <span data-ttu-id="d2d05-108">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="d2d05-108">Gets the type of the event.</span></span> <span data-ttu-id="d2d05-109">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="d2d05-109">See Excel.EventType for details.</span></span>
 
-      <span data-ttu-id="575d3-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="575d3-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d2d05-110">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2d05-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: type
     fullName: type
@@ -67,9 +67,9 @@ items:
           - '"WorksheetRowSorted"'
   - uid: excel.Excel.WorksheetRowSortedEventArgs.worksheetId
     summary: |-
-      <span data-ttu-id="575d3-111">获取发生排序的工作表的 id。</span><span class="sxs-lookup"><span data-stu-id="575d3-111">Gets the id of the worksheet in which the sorting happened.</span></span>
+      <span data-ttu-id="d2d05-111">获取发生排序的工作表的 id。</span><span class="sxs-lookup"><span data-stu-id="d2d05-111">Gets the id of the worksheet where the sorting happened.</span></span>
 
-      <span data-ttu-id="575d3-112">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="575d3-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d2d05-112">\[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d2d05-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     isPreview: true
     name: worksheetId
     fullName: worksheetId
